--- a/style.less
+++ b/style.less
@@ -2,23 +2,55 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    transition: height 0.6s;
 }
 
 html{
     font-size:62.5%;
-    /* 因为100%=16px，1px=6.25%，所以10px=62.5%， */
+    // 因为100%=16px，1px=6.25%，所以10px=62.5%
     body{
         background-color: #FAFAFA;
+        .nav{
+            user-select: none;
+            display: flex;
+            padding: 3rem;
+            padding-bottom: 1rem;
+            font-size: 2.5rem;
+            color: #9e9e9e; 
+            div{
+                margin: 0rem 1rem;
+                transition: all 0.2s;
+            }
+            :nth-child(1){
+                font-weight: bold;
+                color: black;
+            }
+        }
+        .footer{
+            .center();
+            width: 100vw;
+            position: fixed;
+            bottom: 0;
+            padding: 1rem;
+            a{
+                color: #303133;
+                transition: all 0s;
+                &:hover{
+                    color: rgb(0, 0, 0);
+                }
+                p{
+                    transition: all 0s;
+                }
+            }
+        }
     }
     a{
-        text-decoration: none; /* 去除默认的下划线 */
-        color: transparent;    /* 去除默认的颜色和点击后变化的颜色 */    
+        text-decoration: none; 
+        color: black;
+    }
+    p{
+        margin: 0.6rem 0rem;
     }
 } 
-
-
-// @media screen and (max-width: 700px) {html{font-size:60%;}}
 
 .blur-filter{
     transition: all 0.6s;
@@ -29,7 +61,7 @@ html{
     left: 0;
     top: 0;
     background: rgba(0, 0, 0, 0);
-    backdrop-filter: blur(1px); //毛玻璃
+    backdrop-filter: blur(1px);
     -webkit-backdrop-filter: blur(1px); 
 }
 
@@ -39,29 +71,23 @@ html{
     background: rgba(0, 0, 0, 0.25);
 }
 
-// 混合，弹性盒子居中
 .center{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
-.boxconfig(@margin, @height, @width,@radius){
+.boxconfig(@margin, @height, @width,@radius,@color:transparent,@fontcolor:black,@font-weight:bold){
     margin: @margin;
     height: @height;
     width: @width;
     border-radius: @radius;
-}
-
-.open(@height, @width){
-    position: absolute;
-    height: @height;
-    width: @width;
-    left: 50%;
-    top: 50%;
-    margin-left: -(@width/2);
-    margin-top: -(@height/2);
-    z-index: 3;
+    background-color: @color;
+    color: @fontcolor;
+    .title{
+        font-weight: @font-weight;
+    }
 }
 
 .goto{
@@ -76,22 +102,19 @@ html{
     }
 }
 
-.nav{
-    user-select: none;
-    display: flex;
-    padding: 3rem;
-    padding-bottom: 1rem;
-    font-size: 2.5rem;
-    color: #9e9e9e; 
-    div{
-        margin: 0rem 1rem;
-        transition: all 0.2s;
-    }
-    :nth-child(1){
-        font-weight: bold;
-        color: black;
-    }
+.buttongo{
+    .center();
+    color: #ffffff;
+    height: 2.5rem;
+    width: 5rem;
+    border-radius: 2rem;
+    background-color: rgb(0, 106, 159);
 }
+
+.border{
+    border: rgb(203, 203, 203) solid 0.1rem;
+}
+
 
 .painting{
     user-select: none;
@@ -107,170 +130,70 @@ html{
     }
 }
 
+.openconfig(@icon-size-before,@icon-size-after){
+    .center();
+    .icon{
+        width: @icon-size-before;
+        height: auto;
+    }
+    .detail{
+        display: none;
+    }
+    &.show{
+        position: absolute;
+        height: auto;
+        width: 30rem;
+        left: 50%;
+        top: 50%;
+        margin-left: -15rem;
+        margin-top: -15rem;
+        z-index: 3;
+        padding: 3rem 2rem;
+        .icon{
+            width: @icon-size-after;
+            height: auto;
+        }
+        .detail{
+            .center();
+        }
+    }
+}
+
 .computer{
     user-select: none;
     display: flex;
     justify-content: start;
     flex-wrap: wrap;
-    font-size: 1.6rem;
+    font-size: 1.4rem;
+    text-align: center;
     padding: 1rem 2rem;
+    
     .box1{
         .boxconfig(1rem, 19rem, 15rem,1.6rem);
         .github{
-            // transition: width 0.6s;
-            background-color: #24292f;
-            .boxconfig(0rem, 19rem, 15rem,1.6rem);
-            .center();
-            color: #FAFAFA;
-            text-align: center;
-            font-size: 1.4rem;
-            filter: brightness(95%);
-            >div{
-                svg{
-                    width: 8rem;
-                    height: 8rem;
-                }
-                >div{
-                    // font-size: 1rem;
-                    opacity: 0;
-                    display: none;
-                    p:nth-child(1){
-                        margin: 1rem;
-                    }
-                    p:nth-child(2){
-                        .goto();
-                    }
-                }
-            }
-            &:hover{
-                filter: brightness(100%);
-            }
-            &.show{
-                // transition: width 0.6s;
-                .open(30rem,30rem);
-                >div{
-                    svg{
-                        width: 7rem;
-                        height: 7rem;
-                    }
-                    >div{
-                        display: initial;
-                        opacity: 1;
-                    }
-                }
-            }
+            .boxconfig(0rem, 19rem, 15rem,1.6rem,#24292f,#FAFAFA,normal);
+            .openconfig(8rem,7rem);
         }
     }
 
     .box2{
         .boxconfig(1rem, 19rem, 15rem,1.6rem);
         .center();
-        flex-wrap: wrap;
         .box2-1{
-            .boxconfig(0rem, 12rem, 15rem,1.6rem);
+            .boxconfig(0rem, 12rem, 15rem,1.6rem,#ffffff);
             .docs{
-                font-size: 1.4rem;
-                background-color: #ffffff;
-                .boxconfig(0rem, 12rem, 15rem,1.6rem);
-                text-align: center;
-                border: rgb(203, 203, 203) solid 0.1rem;
-                overflow: hidden;
-                .center();
-                .docslogo{
-                    width: 15rem;
-                    >div{
-                        svg{
-                            width: 4rem;
-                            height: 4rem;
-                        }
-                        >p{
-                            color: black;
-                            // font-size: 1.2rem;
-                            font-weight: bold;
-                        }
-                    }
-                    >p{
-                        color: rgb(45, 45, 45);
-                        // font-size: 1rem;
-                        display: none;
-                        opacity: 0;
-                    }
-                    p:nth-child(3){
-                        font-style: italic;
-                        padding-top: 1rem;
-                    }
-                }
-                .opendocs{
-                    background-color: rgb(0, 106, 159);
-                    width: 0rem;
-                    height: 30rem;
-                }
-                &.show{
-                    transition: height 0.7s;
-                    .open(20rem, 30rem);
-                    text-align: left;
-                    .docslogo{
-                        padding: 3rem;
-                        width: 30rem;
-                        >div{
-                            .center();
-                            justify-content: start;
-                            svg{
-                                width: 4rem;
-                                height: 4rem;
-                            }
-                            >p{
-                                color: black;
-                                // font-size: 1.4rem;
-                            }
-                            padding-bottom: 1rem;
-                        }
-                        >p{
-                            display: inline-block;
-                            opacity: 1;
-                        }
-                    }
-                    .opendocs{
-                        background-color: rgb(1, 86, 129);
-                        width: 2rem;
-                    }
-                }
+                .boxconfig(0rem, 12rem, 15rem,1.6rem,#ffffff);
+                .openconfig(4rem,3rem);
+                .border();
             }
         }
         .box2-2{
-            .boxconfig(0rem, 6rem, 15rem,1.6rem);
             margin-top: 1rem;
+            .boxconfig(0rem, 6rem, 15rem,1.6rem);
             .yuque{
-                font-size: 1.4rem;
-                background-color: #ffffff;
-                .boxconfig(0rem, 6rem, 15rem,1.6rem);
-                text-align: center;
-                border: rgb(203, 203, 203) solid 0.1rem;
-                overflow: hidden;
-                // .center();
-                .center();
-                flex-wrap: wrap;
-                img{
-                    width: 7rem;
-                }
-                p{
-                    padding-top: 1rem;
-                    // font-size: 1rem;
-                    display: none;
-                    opacity: 0;
-                }
-                a>p{
-                    .goto();
-                }
-                &.show{
-                    transition: height 0.7s;
-                    .open(20rem, 30rem);
-                    padding: 3rem;
-                    p{
-                        display: block;
-                        opacity: 1;
-                    }
-                }
+                .boxconfig(0rem, 6rem, 15rem,1.6rem,#ffffff);
+                .openconfig(7rem,7rem);
+                .border();
             }
         }
     }
@@ -278,81 +201,10 @@ html{
     .box3{
         .boxconfig(1rem, 8rem, 15rem,1.6rem);
         .hexo{
-            font-size: 1.4rem;
-            background-color: #ffffff;
-            .boxconfig(0rem, 8rem, 15rem,1.6rem);
-            // text-align: center;
-            border: rgb(203, 203, 203) solid 0.1rem;
-            overflow: hidden;
-            // .center();
-            padding: 1rem;
-            .center();
-            flex-wrap: wrap;
-            // font-size: 1.5rem;
-            img{
-                width: 4rem;
-            }
-            .hexologo{
-                .center();
-                font-weight: bold;
-                padding-bottom: 0.5rem;
-                transition: all 0s;
-            }
-            .hexotext{
-                // font-size: 1rem;
-                display: none;
-            }
-            .hexogo{
-                display: none;
-                >a{
-                    color: #ffffff;
-                    >div{
-                        height: 2.5rem;
-                        width: 5rem;
-                        border-radius: 2rem;
-                        background-color: rgb(0, 106, 159);
-                        .center();
-                        // font-size: 1rem
-                    }
-                }
-            }
-    
-            &.show{
-                transition: height 0.7s;
-                .open(20rem, 30rem);
-                padding: 3rem;
-                img{
-                    width: 2.5rem;
-                }
-                .hexologo{
-                    // font-size: 1.4rem;
-                    transition: all 0s;
-                }
-                .hexotext{
-                    display: block;
-                }
-                .hexogo{
-                    .center();
-                }
-            }
+            .boxconfig(0rem, 6rem, 15rem,1.6rem,#ffffff);
+            .border();
+            .openconfig(4rem,3rem);
         }
     }
 }
 
-.footer{
-    .center();
-    width: 100vw;
-    position: fixed;
-    bottom: 0;
-    padding: 1rem;
-    a{
-        color: #303133;
-        transition: all 0s;
-        &:hover{
-            color: rgb(0, 0, 0);
-        }
-        p{
-            transition: all 0s;
-        }
-    }
-}
