优化手机端，响应式

--- a/src/style.less
+++ b/src/style.less
@@ -9,6 +9,17 @@ html{
     // 因为100%=16px，1px=6.25%，所以10px=62.5%
     body{
         background-color: #FAFAFA;
+        .scrollbar{
+            height: 95vh;
+            /* Hide scrollbar for Chrome, Safari and Opera */
+            &::-webkit-scrollbar {
+                display: none;
+            }
+            
+            overflow-y: auto; /* Add the ability to scroll */
+            -ms-overflow-style: none;  /* IE and Edge */
+            scrollbar-width: none;  /* Firefox */
+        }
         .nav{
             user-select: none;
             display: flex;
@@ -28,18 +39,14 @@ html{
         .footer{
             .center();
             width: 100vw;
+            height: 5vh;
             position: fixed;
             bottom: 0;
-            padding: 1rem;
             background-color: #FAFAFA;
             a{
                 color: #303133;
-                transition: all 0s;
                 &:hover{
                     color: rgb(0, 0, 0);
-                }
-                p{
-                    transition: all 0s;
                 }
             }
         }
@@ -54,7 +61,6 @@ html{
 } 
 
 .blur-filter{
-    // transition: all 0.6s;
     position: absolute;
     z-index: -1;
     width: 100vw;
@@ -63,11 +69,10 @@ html{
     top: 0;
     background: rgba(0, 0, 0, 0);
     backdrop-filter: blur(1px);
-    -webkit-backdrop-filter: blur(1px); 
+    -webkit-backdrop-filter: blur(1px);
 }
 
 .appear{
-    // transition: all 0.6s;
     z-index: 2;
     background: rgba(0, 0, 0, 0.25);
 }
@@ -79,7 +84,7 @@ html{
     flex-wrap: wrap;
 }
 
-.boxconfig(@margin, @height, @width,@radius,@color:transparent,@fontcolor:black,@font-weight:bold){
+.boxconfig(@margin, @width,@height, @radius,@color:transparent,@fontcolor:black,@font-weight:bold){
     margin: @margin;
     height: @height;
     width: @width;
@@ -156,6 +161,8 @@ html{
         }
         .detail{
             .center();
+            flex-direction: column;
+            // align-items: center;
         }
     }
 }
@@ -168,31 +175,30 @@ html{
     font-size: 1.4rem;
     text-align: center;
     padding: 1rem 2rem;
-    
     .box1{
-        .boxconfig(0.75rem, 19rem, 15rem,1.6rem);
+        .boxconfig(0.75rem, 15rem, 19rem, 1.6rem);
         .github{
-            .boxconfig(0rem, 19rem, 15rem,1.6rem,#24292f,#FAFAFA,normal);
+            .boxconfig(0rem, 15rem,19rem, 1.6rem,#24292f,#FAFAFA,normal);
             .openconfig(8rem,7rem);
         }
     }
 
     .box2{
-        .boxconfig(0.75rem, 19rem, 15rem,1.6rem);
+        .boxconfig(0.75rem, 15rem,19rem,1.6rem);
         .center();
         .box2-1{
-            .boxconfig(0rem, 12rem, 15rem,1.6rem,#ffffff);
+            .boxconfig(0rem, 15rem,12rem,1.6rem,#ffffff);
             .docs{
-                .boxconfig(0rem, 12rem, 15rem,1.6rem,#ffffff);
+                .boxconfig(0rem,15rem,12rem,1.6rem,#ffffff);
                 .openconfig(4rem,3rem);
                 .border();
             }
         }
         .box2-2{
-            .boxconfig(0rem, 6rem, 15rem,1.6rem);
+            .boxconfig(0rem, 15rem,6rem,1.6rem);
             margin-top: 1rem;
             .yuque{
-                .boxconfig(0rem, 6rem, 15rem,1.6rem,#ffffff);
+                .boxconfig(0rem, 15rem,6rem,1.6rem,#ffffff);
                 .openconfig(7rem,7rem);
                 .border();
             }
@@ -200,21 +206,21 @@ html{
     }
 
     .box3{
-        .boxconfig(0.75rem, 19rem, 15rem,1.6rem);
+        .boxconfig(0.75rem,15rem, 19rem,1.6rem);
         .center();
         .box3-1{
-            .boxconfig(0rem, 8rem, 15rem,1.6rem);
+            .boxconfig(0rem, 15rem,8rem,1.6rem);
             .hexo{
-                .boxconfig(0rem, 8rem, 15rem,1.6rem,#ffffff);
+                .boxconfig(0rem, 15rem,8rem,1.6rem,#ffffff);
                 .border();
                 .openconfig(4rem,3rem);
             }
         }
         .box3-2{
-            .boxconfig(0rem, 10rem, 15rem,1.6rem);
+            .boxconfig(0rem, 15rem,10rem,1.6rem);
             margin-top: 1rem;
             .apifox{
-                .boxconfig(0rem, 10rem, 15rem,1.6rem,#ffffff);
+                .boxconfig(0rem, 15rem,10rem,1.6rem,#ffffff);
                 .border();
                 .openconfig(10rem,8rem);
             }
@@ -222,21 +228,21 @@ html{
     }
 
     .box4{
-        .boxconfig(0.75rem, 19rem, 15rem,1.6rem);
+        .boxconfig(0.75rem, 15rem,19rem,1.6rem);
         .center();
         .box4-1{
-            .boxconfig(0rem, 9rem, 15rem,1.6rem);
+            .boxconfig(0rem, 15rem,9rem,1.6rem);
             .pdf{
-                .boxconfig(0rem, 9rem, 15rem,1.6rem,#ffffff);
+                .boxconfig(0rem, 15rem,9rem,1.6rem,#ffffff);
                 .border();
                 .openconfig(4rem,3rem);
             }
         }
         .box4-2{
-            .boxconfig(0rem, 9rem, 15rem,1.6rem);
+            .boxconfig(0rem, 15rem,9rem,1.6rem);
             margin-top: 1rem;
             .campus-repair{
-                .boxconfig(0rem, 9rem, 15rem,1.6rem,#ffffff);
+                .boxconfig(0rem, 15rem,9rem,1.6rem,#ffffff);
                 .border();
                 .openconfig(10rem,8rem);
             }
@@ -244,3 +250,117 @@ html{
     }
 }
 
+.phonebox(@phoneboxwidth){
+    .computer{
+        padding: 1rem 0rem;
+        justify-content: center;
+        .box1{
+            width: @phoneboxwidth;
+            .github{
+                width: @phoneboxwidth;
+                &.show{
+                    width: 90vw;
+                    margin-left: -45vw;
+                    margin-top: -30vw;
+                }
+            }
+        }
+    
+        .box2{
+            width: @phoneboxwidth;
+            .box2-1{
+                width: @phoneboxwidth;
+                .docs{
+                    width: @phoneboxwidth;
+                    &.show{
+                        width: 90vw;
+                        margin-left: -45vw;
+                        margin-top: -30vw;
+                    }
+                }
+            }
+            .box2-2{
+                width: @phoneboxwidth;
+                margin-top: 1rem;
+                .yuque{
+                    width: @phoneboxwidth;
+                    &.show{
+                        width: 90vw;
+                        margin-left: -45vw;
+                        margin-top: -30vw;
+                    }
+                }
+            }
+        }
+    
+        .box3{
+            width: @phoneboxwidth;
+            .box3-1{
+                width: @phoneboxwidth;
+                .hexo{
+                    width: @phoneboxwidth;
+                    &.show{
+                        width: 90vw;
+                        margin-left: -45vw;
+                        margin-top: -30vw;
+                    }
+                }
+            }
+            .box3-2{
+                width: @phoneboxwidth;
+                margin-top: 1rem;
+                .apifox{
+                    width: @phoneboxwidth;
+                    &.show{
+                        width: 90vw;
+                        margin-left: -45vw;
+                        margin-top: -30vw;
+                    }
+                }
+            }
+        }
+    
+        .box4{
+            width: @phoneboxwidth;
+            .box4-1{
+                width: @phoneboxwidth;
+                .pdf{
+                    width: @phoneboxwidth;
+                    &.show{
+                        width: 90vw;
+                        margin-left: -45vw;
+                        margin-top: -30vw;
+                    }
+                }
+            }
+            .box4-2{
+                width: @phoneboxwidth;
+                margin-top: 1rem;
+                .campus-repair{
+                    width: @phoneboxwidth;
+                    &.show{
+                        width: 90vw;
+                        margin-left: -45vw;
+                        margin-top: -30vw;
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width:600px) {
+    .phonebox(42vw)
+}
+
+@media screen and (max-width:200px) {
+    .phonebox(90vw);
+    html{
+        font-size:30%;
+    }
+}
+@media screen and (max-width:300px) {
+    html{
+        font-size:40%;
+    }
+}
