更新图标，更新链接

--- a/src/style.less
+++ b/src/style.less
@@ -244,7 +244,8 @@ html{
             .campus-repair{
                 .boxconfig(0rem, 15rem,9rem,1.6rem,#ffffff);
                 .border();
-                .openconfig(10rem,8rem);
+                .openconfig(3rem,2rem);
+                flex-direction: column;
             }
         }
     }
